User sync - password generation changed and userName vs Email fix
